Partially fixed combustion chambers